traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:17: error: not found: value compteur
      writeMessage(compteur);
                   ^TraversalDiagonal:20: error: not found: value compteur
      compteur+=1 
      ^